--- a/demos/eventtree/pom.xml
+++ b/demos/eventtree/pom.xml
@@ -4,12 +4,12 @@
   <parent>
     <artifactId>malhar-demos</artifactId>
     <groupId>com.datatorrent</groupId>
-    <version>2.1.0-SNAPSHOT</version>
+    <version>2.2.0-SNAPSHOT</version>
   </parent>
   
   <groupId>com.datatorrent</groupId>
-  <version>2.1.0-SNAPSHOT</version>
-  <artifactId>eventtree</artifactId>
+  <version>2.2.0-SNAPSHOT</version>
+  <artifactId>eventtree-demo</artifactId>
   <packaging>jar</packaging>
 
   <!-- change these to the appropriate values -->
